--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -5,39 +5,34 @@
          <div class="card" style="border-radius: 15px;" style="background-color: #d2eff8;">
            <div class="card-body p-5">
              <h6 class="mb-3 text-center fs-2">Todo List</h6>
-             <div class="mb-4 text-center fs-5">Hello {{firstName}} , Your Pinding Tasks is <span class="text-danger"> {{getPindingTasksCount()}} </span></div>
-             <form class="d-flex justify-content-center align-items-center mb-4">
-               <div class="form-outline flex-fill"> <input type="text" id="form3" class="form-control form-control-lg"
-                   placeholder="What do you need to do today?" />
-                 <!-- <label class="form-label" for="form3">What do you need to do today?</label> -->
-               </div> <button type="submit" class="btn btn-primary btn-lg ms-2">Add</button>
-             </form>
-             <ul class="list-group mb-0">
-               <li
-                 class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
-                 <div class="d-flex align-items-center"> <input class="form-check-input me-2" type="checkbox" value=""
-                     aria-label="..." /> Cras justo odio </div> <a href="#!" class="btn btn-danger"
-                   data-mdb-toggle="tooltip" title="Remove item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20"
-                     height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+             <div class="mb-4 text-center fs-4"> Hello {{firstName}} , Your Pinding Tasks is <span class="text-danger">
+                 {{getPindingTasksCount()}} </span></div>
+             <div class="d-flex justify-content-center align-items-center mb-4">
+               <div class="div-outline flex-fill">
+                 <input type="text" id="form3" class="form-control form-control-lg"
+                   placeholder="What do you need to do today?" #inputTitle (keyup.enter)="add(inputTitle.value)" />
+               </div>
+               <button type="submit" class="btn btn-primary btn-lg ms-2" (click)="add(inputTitle.value)">Add</button>
+             </div>
+
+             <ul class="list-group mb-0" *ngFor="let task of tasks;let currentIndex = index">
+               <li class="list-group-item d-flex justify-content-between align-items-center mb-2 fs-5">
+                 <div class="d-flex align-items-center">
+                   <input [value]="task.isDone" (change)="update(task)" class="form-check-input me-4" type="checkbox"
+                     value="" aria-label="..." />
+                   <div [class.done-task]="task.isDone"> {{task.title}}</div>
+                 </div>
+
+                 <a href="#!" class="btn btn-danger" data-mdb-toggle="tooltip" title="Remove item"
+                   (click)="delete(currentIndex)">
+                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                     class="bi bi-trash" viewBox="0 0 16 16">
                      <path
                        d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
                      <path fill-rule="evenodd"
                        d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                   </svg> </a>
-               </li>
-               <li
-                 class="list-group-item d-flex d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
-                 <div class="d-flex align-items-center"> <input class="form-check-input me-2" type="checkbox" value=""
-                     aria-label="..." checked /> <s>Dapibus ac facilisis in</s> </div> <a href="#!"
-                   class="btn btn-danger" data-mdb-toggle="tooltip" title="Remove item"> <svg
-                     xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash"
-                     viewBox="0 0 16 16">
-                     <path
-                       d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
-                     <path fill-rule="evenodd"
-                       d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                   </svg> </a>
+                   </svg>
+                 </a>
                </li>
              </ul>
            </div>
