--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -18,12 +18,12 @@
              <ul class="list-group mb-0" *ngFor="let task of tasks;let currentIndex = index">
                <li class="list-group-item d-flex justify-content-between align-items-center mb-2 fs-5">
                  <div class="d-flex align-items-center">
-                   <input [value]="task.isDone" (change)="update(task)" class="form-check-input me-4" type="checkbox"
+                   <input [value]="task.IsDone" (change)="update(task)" class="form-check-input me-4" type="checkbox"
                      value="" aria-label="..." />
-                   <div [class.done-task]="task.isDone"> {{task.title}}</div>
+                   <div [class.done-task]="task.IsDone"> {{task.Title}}</div>
                  </div>
 
-                 <a href="#!" class="btn btn-danger" data-mdb-toggle="tooltip" title="Remove item"
+                 <a href="#!" class="btn btn-danger" data-mdb-toggle="tooltip" Title="Remove item"
                    (click)="delete(currentIndex)">
                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                      class="bi bi-trash" viewBox="0 0 16 16">
